objects/Account.object
<CustomObject>
    <fields>
        <fullName>AW_Margin__c</fullName>
        <label>Architectural Workshop Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allow_Margin_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Margin Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfilment_Margin__c</fullName>
        <label>Fulfilment Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Type_Partner__c</fullName>
        <label>Partner Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Model_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>POV_Margin__c</fullName>
        <description>This field is used to provide POV Margin Discount on Quotes</description>
        <label>POV Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Summit_Deg_Reg_Margin__c</fullName>
        <label>Deal Reg Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Tier__c</fullName>
        <label>Partner Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Zenith</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Base Camp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Lock_Margin_Update</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED(Partner_Summit_Deg_Reg_Margin__c) || ISCHANGED(POV_Margin__c) || ISCHANGED(AW_Margin__c) || ISCHANGED(Fulfilment_Margin__c)) &amp;&amp; NOT(Allow_Margin_Override__c)</errorConditionFormula>
        <errorMessage>Partner Margins cannot be modified. Please reach out to Deal Desk.</errorMessage>
    </validationRules>
</CustomObject>